--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "dashboard-frontend",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,9 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
+    "astro": "^4.8.3",
     "@astrojs/check": "^0.6.0",
-    "@astrojs/node": "^8.2.5",
-    "astro": "^4.8.2",
     "typescript": "^5.4.5"
   }
 }
