--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -27,6 +27,7 @@ concurrency:
 env:
   BUILD_PATH: "." # default value when not using subfolders
   # BUILD_PATH: subfolder
+  API_URL: "https://parlier-njrotc-backend.onrender.com/api/alpha/v1/"
 
 jobs:
   build:
