--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -27,7 +27,7 @@ concurrency:
 env:
   BUILD_PATH: "." # default value when not using subfolders
   # BUILD_PATH: subfolder
-  API_URL: "https://parlier-njrotc-backend-bof6.onrender.com/api/alpha/v1/"
+  API_URL: "https://parlier-njrotc-server.onrender.com/api/alpha/v1/"
 
 jobs:
   build:
