--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@astrojs/check": "^0.9.3",
     "astro": "^4.15.7",
     "l": "^0.6.0",
-    "less": "^4.2.0",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "less": "^4.2.0"
   }
 }
